2009-03-11 - Sean Huber (shuber@huberry.com)
  * Rename to phby
  * Add test directory
  * Move Mixin#__call logic into Mixin#send
  * Add Mixin#respond_to
  * Mixin#send now calls real class methods if they exist
  * Rename to phuby
  * Derived classes from Mixin look for a method called initialize to use as their constructors
  * Remove trailing line breaks from some files

2009-03-10 - Sean Huber (shuber@huberry.com)
  * Initial commit
  * Make project structure more like a gem
  * Mixin#mixin now accepts an array or multiple arguments
  * Each member in Mixin#mixin_methods contains an array of the mixed in methods